@@ -8,10 +8,59 @@ public class Calc {
     public static int run(String exp) {
 
         List<String> bits = new ArrayList<>(List.of(exp.split(" ")));
-        List<String> middle =new ArrayList<>(List.of(exp.split(" ")));
+        List<String> middle = new ArrayList<>(List.of(exp.split(" ")));
+        List<String> first =  new ArrayList<>(List.of(exp.split("")));
+        List<String> last =  new ArrayList<>(List.of(exp.split("")));
+        first.removeAll(Arrays.asList(" "));
         int result = 0;
         int index = 0;
-        result = Integer.parseInt(middle.get(0));
+
+        if((middle.get(0).contains("("))) {
+            middle.set(0, "n");
+            bits.set(0, "n");
+        } else {
+            result = Integer.parseInt(middle.get(0));
+        }
+
+        for(int i = 0; i < first.size(); i++) {
+            int a = 0;
+            int b = 0;
+            int c = 0;
+            if(first.contains("(")) {
+                if(first.get(i+1).contains("(")) {
+                } else {
+                    a = Integer.parseInt(first.get(i+1));
+                    b = Integer.parseInt(first.get(i+3));
+                    if(first.get(i+2).contains("*")) {
+                        c = a * b;
+                        first.set(i+3, String.valueOf(c));
+                        first.set(i+2, "n");
+                        first.set(i+1, "n");
+                    } else if (first.get(i+2).contains("/")) {
+                        c = a / b;
+                        first.set(i+3, String.valueOf(c));
+                        first.set(i+2, "n");
+                        first.set(i+1, "n");
+                    } else if (first.get(i+2).contains("+")) {
+                        c = a + b;
+                        first.set(i+3, String.valueOf(c));
+                        first.set(i+2, "n");
+                        first.set(i+1, "n");
+                    } else if (first.get(i+2).contains("-")) {
+                        c = a - b;
+                        first.set(i+3, String.valueOf(c));
+                        first.set(i+2, "n");
+                        first.set(i+1, "n");
+                    }
+                }
+            }
+        }
+
+        first.removeAll(Arrays.asList("("));
+        first.removeAll(Arrays.asList(")"));
+        first.removeAll(Arrays.asList("n"));
+
+//
 
         for(int i = 1; i < middle.size(); i++) {
             int a = 0;
@@ -32,6 +81,7 @@ public class Calc {
         }
 
         middle.removeAll(Arrays.asList("n"));
+
         int count = 0;
 
         for(int i = 0; i < middle.size(); i++) {
@@ -52,7 +102,7 @@ public class Calc {
                     result -= Integer.parseInt(middle.get(a+1));
                 }
             }
-        } else if(bits.size() == middle.size()) {
+        } else {
             for(int a = 0; a < bits.size(); a++) {
                 if (bits.get(a).contains("+")) {
                     result += Integer.parseInt(bits.get(a+1));
@@ -62,7 +112,13 @@ public class Calc {
             }
         }
 
-        return result;
+        if(first.size() == last.size()) {
+            return result;
+        } else {
+            middle.clear();
+            middle.addAll(first);
+            return result;
+        }
 
     }
 }
